# bootstrap

./: .gitignore  4fit.py  README.md  TODO.md  fitting.py  plotting.py
c/src/: modified.cpp  modified2.cpp  modified4.cpp  modified_generate.cpp  plot.plg  precision.cpp  rule_30.cpp  rule_30_generate.cpp  rule_30_halide.h  script_modified.sh  script_modified4.sh  script_precision.sh
jupyter/: Untitled.ipynb
notes/: 2023-08-30-Note-17-01.xoj
py_local_modified/: Untitled.ipynb
pycl/: requirements.txt
pycl/01-demos/: test.py
pycl/02-rule30/: rule30.py
pycl/03-improved-rule30/: float_rule30.cl  float_rule30.py
pycl/04-float_rule30/: float_rule30.cl  float_rule30.py
rust/: Cargo.toml  notes.txt  table1.csv  table4.csv  table5.csv  table_0.csv  table_6.csv
rust_mc/: Cargo.toml  README.md  confience.py  example_run.sh
rust_mc/src/: aux.rs  bool_vec.rs  frobose.rs  main.rs  memory.rs  modified.rs  operations.rs  u64_vec.rs
src/: exec.sh  modified.cpp  modified2.cpp  modified3.cpp  plot.plg  precision.cpp  rule_30.cpp  rule_30_generate.cpp  rule_30_halide.h  script.sh  script_2.sh  script_modified2.sh  script_modified3.sh  test.csv
taichi/: Untitled.ipynb  create_report.ipynb  frobose.py  frobose_t.py  generate_report.py  modified.csv  modified.py  modified_report.ipynb  requirements.txt  result_02.txt  result_03.txt  result_04.txt  result_05.txt  result_06.txt  result_07.txt  result_08.txt  result_09.txt  result_10.txt  result_11.txt  result_12.txt  result_13.txt  table_0.csv  table_1.csv  table_2.csv  table_3.csv  table_4.csv  table_5.csv  table_6.csv
(+95 files in other folders)
