[package]
name = "rust_mc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
enterpolation = "0.2.1"
image = "0.25.1"
indicatif = "0.17.8"
palette = "0.7.6"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rayon = "1.10.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[rust]
debuginfo-level = 1
